# ArizonaGroundWaterETL

./: .env.example  .gitignore  README.md  docker-compose.yml  makefile  pygeoapi.config.yml  pygeoapi.openapi.yml  pyproject.toml
src/: db.py  main.py  mapping.py  xlsx.py
