[project]
name = "arizonaetl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
]
